Bug 372063 - Revocation certificate is created, but an error message is also shown
Summary: Revocation certificate is created, but an error message is also shown
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 10:27 UTC by sdsdgsdg
Modified: 2017-07-11 16:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.08.0
Sentry Crash Report:


Attachments
Screenshot of error (75.89 KB, image/jpeg)
2016-11-04 10:27 UTC, sdsdgsdg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sdsdgsdg 2016-11-04 10:27:28 UTC
Created attachment 102025 [details]
Screenshot of error

In the process of creating a new key pair, an error occurs on the impossibility to create a revocation certificate
Comment 1 Rolf Eike Beer 2016-11-05 16:18:05 UTC
Please check if the revocation certificate is there, I've seen this were an error was raised even if the certificate was created.
Comment 2 sdsdgsdg 2016-11-12 13:51:15 UTC
Yes, certificate revocation is created, but the error still occurs.
Comment 3 Rolf Eike Beer 2016-11-13 12:30:12 UTC
Ok, then it is at least the same problem I've observed.