do not always warn when creating a revocation certificate

BUG:372063
FIXED-IN:17.08.0